Add the map visualisation to the dashboards
Only the dashboards created with a dataset with the provider `featureservice` will show a map.

--- a/app/assets/stylesheets/components/shared/c-dashboard.scss
+++ b/app/assets/stylesheets/components/shared/c-dashboard.scss
@@ -16,6 +16,12 @@
     margin: 0 auto;
   }
 
+  .c-dashboard-map-view {
+    max-width: $body-max-width;
+    height: 600px;
+    margin: 0 auto;
+  }
+
   .c-dashboard-table-view {
     max-width: $content-max-width;
     margin: 0 auto;
