Hide Transifex' native language selector from all the sites

--- a/app/assets/stylesheets/front/_base-theme-lsa.scss
+++ b/app/assets/stylesheets/front/_base-theme-lsa.scss
@@ -100,3 +100,8 @@ a {
 .tab-buttons__tab.mobile-show[data-value="MORE"] {
   display: none !important;
 }
+
+// Native language picker of Transifex
+.txlive-langselector {
+  display: none;
+}
