--- a/app/assets/stylesheets/front/_base-theme-carpe.scss
+++ b/app/assets/stylesheets/front/_base-theme-carpe.scss
@@ -105,3 +105,8 @@ a {
 .tab-buttons__tab.mobile-show[data-value="MORE"] {
   display: none !important;
 }
+
+// Native language picker of Transifex
+.txlive-langselector {
+  display: none;
+}
