Fix warnings in the admin section

--- a/app/views/admin/map_versions/index.html.erb
+++ b/app/views/admin/map_versions/index.html.erb
@@ -21,8 +21,7 @@
 <%= react_component('AdminTableView', {
   meta: {
     columns: ['Version', 'Position', 'Description'],
-    actions: ['edit', 'delete'],
-    datapoint: 'maps'
+    actions: ['edit', 'delete']
   },
-  maps: @formattedMaps
+  data: @formattedMaps
 } ) %>
