Change the header menu colours for the lsa theme

--- a/app/assets/stylesheets/components/front/c-header.scss
+++ b/app/assets/stylesheets/components/front/c-header.scss
@@ -340,6 +340,12 @@
             @if $theme == 3 {
               color: $color-3;
             }
+
+            // Client asked for this color:
+            // https://www.pivotaltracker.com/story/show/159304131
+            @if $theme == 1 {
+              color: $color-6;
+            }
           }
 
           &.-active {
