--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,7 +37,9 @@
       api_key: '<%= @site_page.site.site_settings.transifex_api_key(@site_page.site_id).value || '' %>',
       detectlang: function () {
         var match = location.search.match(/\?(?:.*)?l=([a-z]{2})/);
-        return (match && match.length) > 1 ? match[1]: '<%= @site_page.site.site_settings.default_site_language(@site_page.site_id).value || 'fr' %>';
+        var urlLanguage =  (match && match.length) > 1 ? match[1] : null;
+        var storageLanguage = localStorage.getItem('language') || null;
+        return urlLanguage || storageLanguage || '<%= @site_page.site.site_settings.default_site_language(@site_page.site_id).value || 'fr' %>';
       }
     };
   </script>
