Fix a bug where the user couldn't hide the legend of the widgets

--- a/app/assets/stylesheets/components/shared/c-vizz-wysiwyg.scss
+++ b/app/assets/stylesheets/components/shared/c-vizz-wysiwyg.scss
@@ -19,6 +19,25 @@
     flex-basis: 100%;
   }
 
+  .c-we-vega-chart-legend {
+    top: 10px;
+    right: 10px;
+
+    .toggle-button {
+      @extend .c-button.-mini;
+      border: 1px solid;
+      border-radius: 20px;
+      border-color: $color-1;
+      text-indent: -10000px;
+
+      span {
+        margin: 0;
+        text-indent: 0;
+        border: 0;
+      }
+    }
+  }
+
 
  .c-we-chart, .c-we-chart .chart, .c-we-chart .chart canvas {
   height: 250px;
