Make the dashboard's table wider

--- a/app/assets/stylesheets/components/shared/c-dashboard.scss
+++ b/app/assets/stylesheets/components/shared/c-dashboard.scss
@@ -23,7 +23,7 @@
   }
 
   .c-dashboard-table-view {
-    max-width: $content-max-width;
+    max-width: $body-max-width;
     margin: 0 auto;
   }
 
