--- a/app/views/front/_user.html.erb
+++ b/app/views/front/_user.html.erb
@@ -2,7 +2,9 @@
   <% if session[:current_user].present? %>
 
     <li class="dropdown-item">
-      <a href="#"><%= session[:current_user][:email] %></a>
+      <div class="profile-image" style="background-image: url(<%= session[:current_user][:photo] %>);">
+        <%= session[:current_user][:name][0..1] unless session[:current_user][:photo] %>
+      </div>
       <ul>
         <li>
           <a href="#" class="triggerMySubscriptions">My Subscriptions</a>
