--- a/app/assets/stylesheets/components/front/c-cover.scss
+++ b/app/assets/stylesheets/components/front/c-cover.scss
@@ -105,6 +105,10 @@
       font-family: $font-family-2;
       letter-spacing: 1.25px;
     }
+
+    @if $theme == 3 {
+      text-align: center;
+    }
   }
 
   .cover-attribution {
