Fix an issue where the new wysiwyg's styles would be overwritten

--- a/app/assets/stylesheets/front/_template-fa.css.scss.erb
+++ b/app/assets/stylesheets/front/_template-fa.css.scss.erb
@@ -6,6 +6,7 @@
 '../../../node_modules/widget-editor/dist/styles.min',
 '../../../node_modules/rc-slider/assets/index',
 '../../../node_modules/react-select/dist/react-select',
+'../../../node_modules/vizz-wysiwyg/build/rw',
 'leaflet',
 '../../app/assets/stylesheets/helpers',
 '../../app/assets/stylesheets/front/settings-theme-fa',
