--- a/app/assets/stylesheets/front/application-theme-fa.scss
+++ b/app/assets/stylesheets/front/application-theme-fa.scss
@@ -5,6 +5,7 @@ $color-1:  #97bd3d;
 '../../../node_modules/widget-editor/dist/styles.min',
 '../../../node_modules/rc-slider/assets/index',
 '../../../node_modules/react-select/dist/react-select',
+'../../../node_modules/vizz-wysiwyg/build/rw',
 'leaflet',
 '../helpers',
 'settings-theme-fa',
