--- a/app/assets/stylesheets/management/application.scss
+++ b/app/assets/stylesheets/management/application.scss
@@ -4,6 +4,7 @@
 'sir-trevor',
 'select2',
 '../../../../node_modules/widget-editor/dist/styles.min',
+'../../../../node_modules/vizz-wysiwyg/build/rw',
 '../helpers',
 'settings',
 '../base',
