--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,7 @@
   <%= stylesheet_link_tag 'front/application-theme-fa', media: 'all', 'data-turbolinks-track': 'reload' if (Rails.env.development? && @site_page.site_template.name.eql?('Forest Atlas')) %>
   <%= stylesheet_link_tag 'front/application-theme-lsa', media: 'all', 'data-turbolinks-track': 'reload' if (Rails.env.development? && @site_page.site_template.name.eql?('Landscape Application')) %>
   <%= stylesheet_link_tag 'front/application-theme-carpe', media: 'all', 'data-turbolinks-track': 'reload' if (Rails.env.development? && @site_page.site_template.name.eql?('CARPE Landscape')) %>
+  <%= stylesheet_link_tag 'front/application-theme-ind', media: 'all', 'data-turbolinks-track': 'reload' if (Rails.env.development? && @site_page.site_template.name.eql?('INDIA')) %>
 
   <%= stylesheet_link_tag "front/sites/#{@site_page.site.id}.css", media: 'all', 'data-turbolinks-track': 'reload' unless Rails.env.development?%>
 
