--- a/app/assets/stylesheets/front/_base-theme-ind.scss
+++ b/app/assets/stylesheets/front/_base-theme-ind.scss
@@ -190,7 +190,7 @@ body {
 
 .button_wrapper{
   text-align:center;
-  height="0px";
+  height: 0px;
 
   @media #{$mq-laptop} {
     text-align: left;
