--- a/app/assets/stylesheets/components/front/c-header.scss
+++ b/app/assets/stylesheets/components/front/c-header.scss
@@ -640,7 +640,7 @@
   > .flag-border {
     display: flex;
     position: absolute;
-    top: 50px;
+    bottom: -5px;
     left: 0;
     width: 100%;
     height: 5px;
