--- a/app/views/site_page/not_found.html.erb
+++ b/app/views/site_page/not_found.html.erb
@@ -7,9 +7,9 @@
 <div class="l-error-page">
   <div class="wrapper">
     <h1>The content requested hasn’t been found</h1>
-    <%= render partial: 'site_map' %>
+    <%# render partial: 'site_map' %>
   </div>
 </div>
 
-<%= render 'front/footer' %>
+<%# render 'front/footer' %>
 
