fix templates view is on 1 line

--- a/app/assets/stylesheets/layouts/admin/l-site-creation.scss
+++ b/app/assets/stylesheets/layouts/admin/l-site-creation.scss
@@ -44,8 +44,10 @@
 
     .templates {
       display: flex;
-      align-items: stretch;
-      justify-content: center;
+      align-items: center;
+      justify-content: space-between;
+      flex-direction: column;
+      flex-flow: wrap;
 
       .template {
         position: relative;
