Styles made important and New layout for home page

--- a/app/assets/stylesheets/front/_settings-theme-ind.scss
+++ b/app/assets/stylesheets/front/_settings-theme-ind.scss
@@ -63,6 +63,7 @@ $wrapper-mobile-padding:   15px;
 
 // Breakpoints
 $breakpoint-mobile:  425px;
+$breakpoint-s-mobile:  321px;
 $breakpoint-tablet:  768px;
 $breakpoint-laptop: 1024px;
 $breakpoint-navbar: 1033px;
@@ -73,6 +74,7 @@ $breakpoint-smartphone-max: 812px;
 
 // Media queries
 $mq-mobile: 'screen and (min-width: #{$breakpoint-mobile}) and (orientation: portrait)';
+$mq-s-mobile: 'screen and (max-width: #{$breakpoint-s-mobile}) and (orientation: portrait)';
 $mq-tablet: 'screen and (min-width: #{$breakpoint-tablet})';
 $mq-laptop: 'screen and (min-width: #{$breakpoint-laptop})';
 $mq-navbar: 'screen and (min-width: #{$breakpoint-navbar})';
