--- a/app/assets/stylesheets/front/_base-theme-ind.scss
+++ b/app/assets/stylesheets/front/_base-theme-ind.scss
@@ -17,18 +17,18 @@ body {
 }
 
 body {
-  color: rgba(11, 9, 8, 1);
-  font-family: $font-family-1;
-  font-size: $font-size-s-normal;
-  font-weight: $font-weight-light;
-  line-height: 1.7;
+  color: rgba(11, 9, 8, 1) !important;
+  font-family: $font-family-1 !important;
+  font-size: $font-size-s-normal !important;
+  font-weight: $font-weight-light !important;
+  line-height: 1.7 !important;
 
   @media #{$mq-body-width} {
-    margin: 0 auto;
+    margin: 0 auto !important;
   }
 
   &.-wide {
-    max-width: none;
+    max-width: none !important;
   }
 }
 
@@ -39,86 +39,88 @@ body {
 
 .c-header{
     background-color: $color-17 !important;
-    width: 100vw;
-    position: absolute;
+    width: 100vw !important;
+    position: absolute !important;
 
     @media #{$mq-mobile} {
-      position: static;
+      position: static !important;
     }
 
     @media #{$mq-tablet} {
-      position: absolute;
+      position: absolute !important;
     }
 
     @media #{$mq-laptop} {
-      position: absolute;
+      position: absolute !important;
     }
 
     .desktop-menu{
-      @if $theme == 3 {
-        margin: 20px auto;
+      height: 80px !important;
+      .logo-container{
+        margin-top: 20px;
       }
-
       .menu{
+        margin-top: 15px !important;
+
         > ul{
           > li {
-            text-transform: capitalize;
-            font-size: $font-size-x-normal;
+            text-transform: capitalize !important;
+            font-size: $font-size-x-normal !important;
             > a {
-              color: $color-3;
+              color: $color-3 !important;
             }
-            a:hover { color: #ef8821; }
+            a:hover { color: #F0AB00 !important; }
             >ul{
               > li{
-                a:hover{color: #ef8821; }
+                a:hover { color: #F0AB00 !important; }
               }
-              li:hover{ background-color: rgba(255, 255, 255, 0.1);
+              li:hover{ background-color: rgba(255, 255, 255, 0.1) !important;
               }
             }
           }
           li:hover{ 
-            background-color: rgba(255, 255, 255, 0.1);
-            a{color: #ef8821;}
+            background-color: rgba(255, 255, 255, 0.1) !important;
+            a{color: #F0AB00;}
           }
 
           &:last-of-type {
             > li{
               &:last-of-type {
-                padding-right: 15px;
+                padding-right: 15px !important;
               }
             }
           }
         }
       }
       .sub-menu-background{
-        top: 90px; 
-        position: absolute; 
-        width: 100vw; 
-        background-color: black; 
-        opacity: 0.7; 
-        height: 25px; 
-        left: 0;
-        z-index: 1; 
+        top: 80px !important; 
+        position: absolute !important; 
+        width: 100vw !important; 
+        background-color: black !important; 
+        opacity: 0.7 !important; 
+        height: 25px !important; 
+        left: 0 !important;
+        z-index: 1 !important; 
       }
       .sub-menu{
-        position: absolute;
-        top: 89px;
-        padding: 0 15px;
+        position: absolute !important;
+        top: 80px !important;
+        padding: 0 15px !important;
         &::after {
           top: 0px !important;
-          background-color: transparent;
+          background-color: transparent !important;
 
         }
         a {
-          color: rgba($color-3, 1);
+          color: rgba($color-3, 1) !important;
         }
         .content{
-          color: rgba($color-3, 1);
+          color: rgba($color-3, 1) !important;
           .breadcrumbs {
             li {
-              text-transform: capitalize;
-              font-weight: $font-weight-light;
-              font-size: $font-size-normal                            
+              text-transform: capitalize !important;
+              font-weight: $font-weight-light !important;
+              font-size: $font-size-normal !important;              
             }
           }
         }      
@@ -126,90 +128,86 @@ body {
     }
 
     .mobile-menu {
-      height: 40px;
-      padding: 5px $wrapper-padding;
+      height: 70px !important;
+      margin-top: 20px;
 
-      @media #{$mq-mobile} {
-        position: static;
+      @media #{$mq-s-mobile} {
+        position: static !important;
+        height: 55px !important;
       }
       
       @media #{$mq-smartphone}{
-        margin: 5px 0 20px auto;
-        padding: 5px 30px;
+        height: 80px !important;
       }
 
       @media #{$mq-tablet} {
-        height: 73px;
-        padding: 10px $wrapper-padding;
+        height: 80px !important;
         
       }
       @media #{$mq-smartphone-big}{
-        margin: 0;
-        height: 73px;
-        padding: 10px $wrapper-padding;
+        margin: 0 !important;
+        height: 80px !important;
       }
       .hamburger-menu {
-        width: 22px;
+        width: 22px !important;
       }
     }
 }
 
 .c-cover{
-  padding: 50 0 30;
-  height: calc(100vh - 50px);
+  padding: 50 0 30 !important;
+  height: calc(100vh - 50px) !important;
 
   @media #{$mq-smartphone}{
-    height: 100vh;
+    height: 100vh !important;
   }
 
   &.-short {
-    height: 20vh;
+    height: 20vh !important;
 
     @media #{$mq-smartphone}{
-      height: 50vh;
+      height: 50vh !important;
     
     }
 
     @media #{$mq-tablet} {
-      height: 20vh;      
+      height: 20vh !important;      
     }
 
     @media #{$mq-smartphone-big}{
-      height: 50vh;
+      height: 50vh !important;
 
     }
 
     @media #{$mq-laptop} {
-      height: 30vh;
-    }  
+      height: 30vh !important;
+    }
+
+    @media #{$mq-laptop} {
+      height: 30vh !important;
+    }
   }
   .wrapper{
-    max-width: $body-max-width;
+    max-width: $body-max-width !important;
   }
 }
 
 .button_wrapper{
-  text-align:center;
-  height: 0px;
-
-  @media #{$mq-laptop} {
-    text-align: left;
-    flex: 1;
-  }
-  @media #{$mq-body-width} {
-    text-align: left;
-    flex: 1;
-  }
-
+  text-align: left !important;
+  bottom: 0 !important;
+  position: absolute !important;
 }
 
 .cover-elem-wrapper{
-
+  width: 100%;
   @media #{$mq-laptop} {
     display: flex;
+    margin-left: 25px;
   }
   @media #{$mq-body-width} {
     display: flex;
+    margin-left: 25px;
+
   }
 
 }
@@ -231,7 +229,7 @@ body {
   text-decoration: none;
   background-color: rgba(11,9,8,1); 
   border: none; 
-  color: #feb63e; 
+  color: #F0AB00; 
   padding: 10px 20px;
   text-align: center;
   display: inline-block;
@@ -274,18 +272,20 @@ body {
   }
 
   @media #{$mq-laptop} {
-    top: 3vh;
+    top: 0;
     position: relative;
-    left: -7vw;
+    left: 0;
     font-size: $font-size-medium;
+    
+    margin-left: -70px;
   }
 
   @media #{$mq-body-width} {
-    top: 3vh;
+    top: 0;
     position: relative;
-    left: -5vw;
+    left: 0;
     font-size: $font-size-x-medium;
-
+    margin-left: -70px;
   }  
 }
 
@@ -303,7 +303,7 @@ body {
 
     @media #{$mq-smartphone}{
 
-      top: 25vh !important;
+      top: 28vh !important;
       position: absolute !important;
       margin-left: 0px;
       max-width: 100vw;
@@ -375,6 +375,7 @@ body {
   top: 8vh;
   position: absolute;
   padding: 0 15px;
+  color: #fff;
 
 
   @media #{$mq-smartphone}{
@@ -420,7 +421,7 @@ body {
 
   @media #{$mq-smartphone}{
 
-    top: 43vh !important;
+    top: 46vh !important;
     position: absolute !important;
     max-width: 70vw;
     font-size: $font-size-medium;
@@ -529,17 +530,20 @@ a {
 .map-container{
 
   
-  top: 40px !important;
+  top: 70px !important;
   position: fixed !important;
   
-
+  @media #{$mq-s-mobile} {
+    top: 55px !important;
+    position: fixed !important;
+  }
   @media #{$mq-smartphone}{
-    top: 50px !important;
+    top: 80px !important;
     position: fixed;
   }
 
   @media #{$mq-tablet} {
-    top: 73px !important;
+    top: 80px !important;
     position: fixed !important;
   }
 
@@ -566,29 +570,29 @@ a {
 
 .no_height{
   height: 0px !important;
-  position: relative;
+  position: relative !important;
 }
 
 .c-footer{
-  position: absolute;
-  bottom: 0;
-  width: 100vw;
+  position: absolute !important;
+  bottom: 0 !important;
+  width: 100vw !important;
 }
 
 .fa-page{
   min-height: 100vh !important;
-  padding: 0 0 130px;
-  position: relative;
+  padding: 0 0 130px !important;
+  position: relative !important;
 
   @media #{$mq-smartphone}{
-    padding: 0 0 130px;
+    padding: 0 0 130px !important;
   }
 
   @media #{$mq-tablet}{
-    padding: 0 0 50px;
+    padding: 0 0 50px !important;
   }
   @media #{$mq-smartphone-big}{
-    padding: 0 0 50px;
+    padding: 0 0 50px !important;
   }
 
 }
@@ -648,5 +652,89 @@ form{
     font-family: 'Acumin Pro';
     font-weight: 600;
     font-size: 15px;
+  }
+}
+
+.cover-description-para{
+  @media #{$mq-laptop} {
+    max-width: 95%;
+    font-size: $font-size-medium;
+    font-weight: $font-weight-normal;
+    line-height: 1.5;
+    margin: 0;
+    color: white;
+  }
+  @media #{$mq-body-width} {
+    max-width: 90%;
+    font-size: $font-size-x-medium;
+    font-weight: $font-weight-normal;
+    line-height: 1.5;
+    margin: 0;
+    color: white;
+  }  
+}
+
+.cover-title-para{
+
+  @media #{$mq-laptop} {
+    font-size: 27px;
+    font-weight: $font-weight-bold;
+    margin: 0;
+    color: #97BD3D;
+  }
+
+  @media #{$mq-body-width} {
+    font-size: 33px;
+    font-weight: $font-weight-bold;
+    margin: 0;
+    color: #97BD3D;
+  }
+
+}
+
+.cover-page-wrapper{
+  margin-right: 30px !important;
+  flex: 1 !important;
+}
+
+.hr-homepage{
+  max-width: 100%;
+  text-align: left;
+  margin-left: 0;
+  color: #97BD3D;
+  border: 0.5px solid;
+}
+
+.restoration_image_div{
+  width: 100%;
+}
+
+.cover_page_wrapper_envelope{
+  background-color: rgba(11,8,9,0.7);
+  max-width: 40%;
+  padding: 30px;
+  flex: 1;
+  height: auto;
+}
+
+.atlas_flex_div{
+  position: relative;
+  flex: 1;
+  margin-left: 10%;
+  
+}
+.restoration_image{
+  @media #{$mq-laptop} {
+    height: 250px;
+    margin-left: -75px;
+    margin-bottom: -60px;
+    margin-top: -40px;
+  }
+
+  @media #{$mq-body-width} {
+    height: 350px;
+    margin-left: -100px;
+    margin-bottom: -60px;
+    margin-top: -40px;
   }
 }
